--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "declarations": true
   },
   "scripts": {
-    "bootstrap:test": "yarn --registry=https://registry.npmjs.org && yarn start",
+    "bootstrap:test": "yarn --registry=https://registry.npmjs.org && yarn tsc && yarn start",
     "start": "egg-scripts start --daemon --title=egg-server-nkm-cms --port=3101",
     "stop": "egg-scripts stop --title=egg-server-nkm-cms",
     "dev": "egg-bin dev",
