--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ci": "npm run lint && npm run cov && npm run tsc",
     "autod": "autod",
     "lint": "eslint . --ext .ts --fix",
-    "clean": "ets clean"
+    "clean": "ets clean",
+    "push": "git push && git push gitlab master"
   },
   "dependencies": {
     "egg": "^2.29.1",
