--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "push": "git push && git push gitlab master"
   },
   "dependencies": {
+    "@xuanmo/javascript-utils": "^0.0.13",
     "@xuanmo/mime-types": "^0.0.2",
     "egg": "^2.29.1",
     "egg-redis": "^2.4.0",
